final fixes spacing

--- a/src/App.css
+++ b/src/App.css
@@ -60,7 +60,7 @@ h2 {
 
 .image-gallery {
   position: fixed;
-  right: 400px;
+  right: 350px;
   top: 100px;
   width: 400px;
   height: 400px;
